--- a/Ocelot/Ocelot.csproj
+++ b/Ocelot/Ocelot.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net9.0-windows</TargetFramework>
         <PackageId>FFXIVOcelot</PackageId>
@@ -14,21 +14,21 @@
         <DebugType>embedded</DebugType>
     </PropertyGroup>
     <PropertyGroup>
-        <DalamudLibPath Condition="$([MSBuild]::IsOSPlatform('Windows'))">$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+        <DalamudLibPath Condition="$([MSBuild]::IsOSPlatform('Windows'))">$(appdata)\XIVLauncherCN\addon\Hooks\dev\</DalamudLibPath>
         <DalamudLibPath Condition="$([MSBuild]::IsOSPlatform('Linux'))">$(HOME)/.xlcore/dalamud/Hooks/dev/</DalamudLibPath>
         <DalamudLibPath Condition="$([MSBuild]::IsOSPlatform('OSX'))">$(HOME)/Library/Application Support/XIV on Mac/dalamud/Hooks/dev/</DalamudLibPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Ecommons" Version="3.0.0.17-api13"/>
-        <PackageReference Include="Pictomancy" Version="0.0.1"/>
+      <ProjectReference Include="..\..\ECommons\ECommons\ECommons.csproj" />
+      <ProjectReference Include="..\..\ffxiv_pictomancy\Pictomancy\Pictomancy.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <Reference Include="Dalamud" HintPath="$(DalamudLibPath)Dalamud.dll" Private="False"/>
-        <Reference Include="Dalamud.Bindings.ImGui" HintPath="$(DalamudLibPath)\Dalamud.Bindings.ImGui.dll" Private="false"/>
-        <Reference Include="Dalamud.Bindings.ImPlot" HintPath="$(DalamudLibPath)\Dalamud.Bindings.ImPlot.dll" Private="false"/>
-        <Reference Include="Lumina" HintPath="$(DalamudLibPath)Lumina.dll" Private="False"/>
-        <Reference Include="Lumina.Excel" HintPath="$(DalamudLibPath)Lumina.Excel.dll" Private="False"/>
-        <Reference Include="FFXIVClientStructs" HintPath="$(DalamudLibPath)FFXIVClientStructs.dll" Private="False"/>
-        <Reference Include="InteropGenerator.Runtime" HintPath="$(DalamudLibPath)InteropGenerator.Runtime.dll" Private="False"/>
+        <Reference Include="Dalamud" HintPath="$(DalamudLibPath)Dalamud.dll" Private="False" />
+        <Reference Include="Dalamud.Bindings.ImGui" HintPath="$(DalamudLibPath)\Dalamud.Bindings.ImGui.dll" Private="false" />
+        <Reference Include="Dalamud.Bindings.ImPlot" HintPath="$(DalamudLibPath)\Dalamud.Bindings.ImPlot.dll" Private="false" />
+        <Reference Include="Lumina" HintPath="$(DalamudLibPath)Lumina.dll" Private="False" />
+        <Reference Include="Lumina.Excel" HintPath="$(DalamudLibPath)Lumina.Excel.dll" Private="False" />
+        <Reference Include="FFXIVClientStructs" HintPath="$(DalamudLibPath)FFXIVClientStructs.dll" Private="False" />
+        <Reference Include="InteropGenerator.Runtime" HintPath="$(DalamudLibPath)InteropGenerator.Runtime.dll" Private="False" />
     </ItemGroup>
 </Project>
